2002-05-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (conditional_true_when): Return false if $WHEN == FALSE.
	(conditional_is_redundant): Simplify.
	(conditional_implies_one_of,
	variable_not_always_defined_in_cond): New functions
	(macro_define): Reject appends if the variable is not defined in
	all conditions where `+=' applies.
	(invert_conditions): Rewrite.  Before this patch,
	invert_conditions("A_TRUE B_TRUE", "A_TRUE B_FALSE", "A_FALSE")
	would return ("A_FALSE B_TRUE", "A_FALSE B_TRUE"), which seems
	wrong (these conditions implies "A_FALSE").  Now it outputs (),
	which just means the input conditions cover all cases.
	(variable_conditions_permutations): Never output FALSE conditions.
	* tests/pluseq2.test, tests/pluseq3.test: Define data_DATA
	in the CHECK_FALSE condition to fix the test.
	* tests/pluseq5.test: Actually check the diagnostic.
	* tests/pluseq9.test: New file.
	* tests/Makefile.am (TESTS): Add pluseq9.test.

2002-05-14  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/322:
	* automake.in (read_am_file): Rename $was_rule as $prev_state, and
	set it with IN_RULE_DEF, IN_VAR_DEF, or IN_COMMENT as appropriate.
	Handle comments continued by backslashes.
	* tests/comment6.test: New file.
	* tests/Makefile.am (TESTS): Add comment6.test.
	Reported by Braden N. McDaniel.

2002-05-08  Charles Wilson  <cwilson@ece.gatech.edu>
            Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/progs.am (clean-%DIR%PROGRAMS): If Libtool is used, clean
	both `program$(EXEEXT)' and `program'; needed under Cygwin.
	* tests/libtool3.test: New file.
	* tests/Makefile.am (TESTS): Add libtool3.test.

2002-05-07  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* TODO: Undust.

2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* Makefile.am (FETCHFILES, fetch): Get INSTALL from Autoconf CVS.

2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Erase stamps from the Makefile that generates them.
