@@ -1,4 +1,6 @@
 New in 1.6a:
+* `make distcheck' will enforce DESTDIR support by attempting
+  a DESTDIR install.
 * `+=' can be used in conditionals, even if the augmented variable
   was defined for another condition.
 * It is no longuer a requirement to use AM_CONFIG_HEADER instead of
