@@ -1,3 +1,10 @@
+2002-05-17  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	For PR automake/186:
+	* lib/am/distdir.am (distcheck): Attempt a DESTDIR install.
+	* tests/destdir.test: New file.
+	* tests/Makefile.am (TESTS): Add destdir.test.
+
 2002-05-16  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* automake.in (conditional_true_when): Return false if $WHEN == FALSE.
